fixed NPE introduced by ven